[gd_scene load_steps=7 format=3 uid="uid://c8rxmguwiayly"]

[ext_resource type="AudioStream" uid="uid://cj88uiu5caqtl" path="res://Scenes/InteractiveObjects/Coin/Sound/Validation.ogg" id="1_oaits"]
[ext_resource type="Script" path="res://Scenes/Behaviours/collectable_behaviour.gd" id="1_u6sgq"]
[ext_resource type="Script" path="res://StateMachine/state_machine.gd" id="1_v1eed"]
[ext_resource type="Script" path="res://Scenes/InteractiveObjects/Coin/States/spawn.gd" id="2_vle15"]
[ext_resource type="Script" path="res://StateMachine/state.gd" id="3_p8c56"]
[ext_resource type="Script" path="res://Scenes/InteractiveObjects/Coin/States/follow.gd" id="4_8xscr"]

[node name="CollectableBehaviour" type="Node2D"]
script = ExtResource("1_u6sgq")

[node name="FollowArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]

[node name="CollectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]

[node name="CollectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_oaits")

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("1_v1eed")

[node name="Spawn" type="Node2D" parent="StateMachine"]
script = ExtResource("2_vle15")

[node name="SpawnTimer" type="Timer" parent="StateMachine/Spawn"]
wait_time = 0.4
one_shot = true
autostart = true

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("3_p8c56")

[node name="Follow" type="Node2D" parent="StateMachine"]
script = ExtResource("4_8xscr")

[node name="Collect" type="Node2D" parent="StateMachine"]
script = ExtResource("3_p8c56")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="body_entered" from="FollowArea" to="." method="_on_follow_area_body_entered"]
[connection signal="state_changed" from="StateMachine" to="." method="_on_state_machine_state_changed"]
[connection signal="timeout" from="StateMachine/Spawn/SpawnTimer" to="StateMachine/Spawn" method="_on_spawn_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
